--- a/.github/workflows/update-tokens.yml
+++ b/.github/workflows/update-tokens.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           name: ${{ github.event.client_payload.filename }}
           json: ${{ github.event.client_payload.tokens }}
-          fir: "input"
+          dir: "input"
 
       - name: Install Node.js
         uses: actions/setup-node@v3
