--- a/.github/workflows/update-tokens.yml
+++ b/.github/workflows/update-tokens.yml
@@ -4,6 +4,9 @@ on:
   repository_dispatch:
     types: update-tokens
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
